--- a/contracts_for_concurrency-01-chapters.tex
+++ b/contracts_for_concurrency-01-chapters.tex
@@ -243,12 +243,23 @@ least one of which is write, and these accesses are not ordered by
 
 \section{Common Defects in Multi-threaded Programs}
 
-\todo{overview, focus on atomicity and order violation, and something else?}
+\todo{overview}
+
+\subsection{Data Race}
+
+\todo{}
+
+\subsection{Atomicity Violation}
+
+\todo{}
+
+\subsection{Order Violation}
+
+\todo{}
+
+\subsection{Other}
 
 \todo{ \newline
-* data race \newline
-* atomicity violation \newline
-* order violation \newline
 * deadlock \newline
 * missed signal \newline
 * blocked thread, livelock, starvation \newline
