--- a/contracts_for_concurrency.tex
+++ b/contracts_for_concurrency.tex
@@ -68,6 +68,7 @@
 \csdoublequotesoff
 
 \usepackage{mathabx}
+\usepackage{tikz}
 
 \usepackage{url}
 
@@ -117,7 +118,7 @@
 %---------------------------------------------------------------------------
 \projectinfo{
   %Prace / Thesis
-  project={DP},            %typ práce BP/SP/DP/DR  / thesis type (SP = term project)
+  project={SP},            %typ práce BP/SP/DP/DR  / thesis type (SP = term project)
   year={2020},             % rok odevzdání / year of submission
   date=\today,             % datum odevzdání / submission date
   %Nazev prace / thesis title
@@ -137,7 +138,7 @@
   supervisor.title.p={Ing.},
   supervisor.title.a={Ph.D.},
   % Klíčová slova / keywords
-  keywords.cs={verifikace software, dynamická analýza, Java, kontrakty pro
+  keywords.cs={verifikace softwaru, dynamická analýza, Java, kontrakty pro
   paralelismus, RoadRunner, instrumentace, Java bajtkód, vícevláknové
   programování},
   keywords.en={software verification, dynamic analysis, Java, contracts for
@@ -148,18 +149,17 @@
   sekvencí metod ve vícevláknových programech. Tato práce se zaměřuje na
   implementaci dynamického analyzátoru, který bude verifikovat programy napsané
   v jazyce Java vůči kontraktům. Analyzátor je implementován pomocí frameworku
-  RoadRunner. \todo{výsledky}},
+  RoadRunner.},
   abstract.en={Contracts for concurrency describes required atomicity of method
   sequences in concurrent programs. This work aims at implementing a dynamic
   analyser to verify programs written in Java against contracts. The analyser is
-  built upon the RoadRunner framework. \todo{results}},
-  declaration={I hereby declare that this diploma thesis was prepared as an
+  built upon the RoadRunner framework.},
+  declaration={I hereby declare that this term project was prepared as an
   original work by the author under the supervision of Ing. Aleš Smrčka, Ph.D.
-  The supplementary information was provided by \todo{TODO} I have listed all
-  the literary sources, publications and other sources, which were used during
-  the preparation of this thesis.},
-  acknowledgment={\todo{TODO}},
-  extendedabstract={\todo{TODO}},
+  I have listed all the literary sources, publications and other sources, which
+  were used during the preparation of this project.},
+  acknowledgment={},
+  extendedabstract={},
   faculty.cs={Fakulta informačních technologií},
   faculty.en={Faculty of Information Technology},
 }
