--- a/contracts_for_concurrency-20-bibliography.bib
+++ b/contracts_for_concurrency-20-bibliography.bib
@@ -157,6 +157,16 @@ series = {POPL '04}
     keywords = {atomicity, dynamic analysis, reduction}
 }
 
+@book{jvmspec,
+    author = {Lindholm, Tim and Yellin, Frank and Bracha, Gilad and Buckley, Alex},
+    title = {The Java Virtual Machine Specification, Java SE 8 Edition},
+    year = {2014},
+    isbn = {013390590X},
+    publisher = {Addison-Wesley Professional},
+    edition = {1st},
+    pages = {69-332}
+}
+
 %    @BOOK{Pravidla,
 %      author =       "Zdeněk Hlavsa and others",
 %      title =        "Pravidla českého pravopisu",
